force-app/main/default/objects/Connections__c/fields/Connection_Relationship_Id__c.field-meta.xml
<CustomField>
    <fullName>Connection_Relationship_Id__c</fullName>
    <label>Connection Relationship ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>