force-app/main/default/objects/Connections__c/fields/Is_Common__c.field-meta.xml
<CustomField>
    <fullName>Is_Common__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Common</label>
    <type>Checkbox</type>
</CustomField>