force-app/main/default/objects/Connections__c/fields/Is_Statement_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Is_Statement_Recipient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Statement Recipient</label>
    <type>Checkbox</type>
</CustomField>