force-app/main/default/objects/Connections__c/fields/Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>Organization_Id__c</fullName>
    <label>Organization ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>