force-app/main/default/objects/Connections__c/fields/Relationship_Types__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Types__c</fullName>
    <label>Relationship Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case Manager</fullName>
            </value>
            <value>
                <fullName>Co-Guardian</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Rep. Payee</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Sister</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>