force-app/main/default/objects/Connections__c/fields/True_Link_Id__c.field-meta.xml
<CustomField>
    <fullName>True_Link_Id__c</fullName>
    <externalId>true</externalId>
    <label>True Link ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>